# cuda_akaze_pybind

./: .gitignore  CMakeLists.txt  INITCHECK_MODIFICATION_STRATEGY.md  RACECHECK_MODIFICATION_STRATEGY.md  REPRODUCIBILITY_REPORT.md  TEST_STRATEGY_REEVALUATION.md  __init__.py  akaze.cpp  akaze_bindings.cpp  akazed.cu  akazed.h  gdb_trace_functions.gdb  homography_1.txt  homography_run1.txt  homography_run2.txt  pyproject.toml  repro_1.txt  repro_2.txt  repro_3.txt  repro_4.txt  repro_5.txt  repro_full_dump.txt  repro_nndr2.txt  repro_test.cpp  run_compute_sanitizer.sh  run_match_repro_test.sh  run_path3_only_match_input_test.sh  run_path_order_tests.sh  run_reproducibility_test.sh  setup.py  test_gHammingMatch.cu
_skbuild/linux-x86_64-3.10/cmake-build/: CMakeCache.txt  CMakeSpec.json  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cuakaze  install_manifest.txt  repro_test
_skbuild/linux-x86_64-3.10/cmake-install/cuda_akaze/: __init__.py
_skbuild/linux-x86_64-3.10/setuptools/lib/cuda_akaze/: akaze_aligner.py
_skbuild/linux-x86_64-3.11/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  cuakaze  install_manifest.txt  repro_test
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/cuda_akaze/: akaze_aligner.py
cuda_akaze/: __init__.py  akaze_aligner.py  compare.py  test_akaze_aligner.py
cuda_akaze.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cuda_akaze_cpp/: akaze_aligner.cpp  akaze_aligner.h  test_akaze_aligner.cpp
repro_results/: batch_10.txt  batch_15.txt  cs_dump.txt  cs_run_dump.txt  inv_run10_dump.txt  inv_run11_dump.txt  inv_run12_dump.txt  inv_run13_dump.txt  inv_run14_dump.txt  inv_run15_dump.txt  inv_run16_dump.txt  inv_run17_dump.txt  inv_run18_dump.txt  inv_run19_dump.txt  inv_run1_dump.txt  inv_run20_dump.txt  inv_run21_dump.txt  inv_run22_dump.txt  inv_run23_dump.txt  inv_run24_dump.txt  inv_run25_dump.txt  inv_run26_dump.txt  inv_run27_dump.txt  inv_run28_dump.txt  inv_run29_dump.txt  inv_run2_dump.txt  inv_run30_dump.txt  inv_run31_dump.txt  inv_run32_dump.txt  inv_run3_dump.txt  inv_run4_dump.txt  inv_run5_dump.txt  inv_run6_dump.txt  inv_run7_dump.txt  inv_run8_dump.txt  inv_run9_dump.txt  match_run6.txt  p3only_mi_run10_dump.txt  p3only_mi_run11_dump.txt  p3only_mi_run12_dump.txt  (+184 more)
src/: akaze.cpp  akaze_bindings.cpp  akaze_structures.h  akazed.cu  akazed.h  cuda_utils.h  main.cpp
test/: PERFORMANCE_ANALYSIS.md  test_akaze_aligner.py  test_cuda_akaze.py
